--- a/public/backend/css/style.css
+++ b/public/backend/css/style.css
@@ -8847,17 +8847,17 @@ hr{
     visibility: hidden;
   }
 :root {
-  --primary-color-50: #eef2ff;
-  --primary-color-100: #e0e7ff;
-  --primary-color-200: #c7d2fe;
-  --primary-color-300: #a5b4fc;
-  --primary-color-400: #818cf8;
-  --primary-color-500: #6366f1;
-  --primary-color-600: #4f46e5;
-  --primary-color-700: #4338ca;
-  --primary-color-800: #3730a3;
-  --primary-color-900: #312e81;
-  --primary-color-950: #1e1b4b;
+  --primary-color-50: #ECFDF5;
+  --primary-color-100: #D1FAE5;
+  --primary-color-200: #A7F3D0;
+  --primary-color-300: #6EE7B7;
+  --primary-color-400: #34D399;
+  --primary-color-500: #10B981;
+  --primary-color-600: #059669;
+  --primary-color-700: #047857;
+  --primary-color-800: #065F46;
+  --primary-color-900: #064E3B;
+  --primary-color-950: #022C22;
 }
 
 .table-content-link{
